--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "image-to-base64": "^2.2.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-hot-toast": "^2.1.1",
