--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.18.0",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-image-crop": "^9.0.5",
     "react-image-file-resizer": "^0.4.7",
     "react-lottie-wrapper": "^1.1.8",
     "react-redux": "^7.2.6",
