--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.17.4",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "browser-image-compression": "^1.0.17",
     "firebase": "^9.5.0",
     "image-to-base64": "^2.2.0",
