--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-hot-toast": "^2.1.1",
