--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.18.0",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
