--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "browser-image-compression": "^1.0.17",
     "firebase": "^9.5.0",
+    "framer-motion": "^4.1.17",
     "image-to-base64": "^2.2.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
